Switching to AWS SDK v2, Java 8